--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       artifact_name: linux-${{ matrix.build.arch }}-${{ matrix.build.type }}.tar.br
-      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241002/cpython-3.11.10+20241002-x86_64_v3-unknown-linux-gnu-install_only_stripped.tar.gz'
+      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-x86_64_v3-unknown-linux-gnu-install_only_stripped.tar.gz'
       pip_args: ${{ matrix.build.pip_args }} -r requirements.${{ matrix.build.type }}.txt
     steps:
       - name: Remove unnecessary files
@@ -107,14 +107,14 @@ jobs:
             pip_args: ''
           - arch: 'x64'
             type: 'directml'
-            pip_args: '--pre'
+            pip_args: ''
           - arch: 'x64'
             type: 'cpu'
             pip_args: ''
     runs-on: windows-latest
     env:
       artifact_name: win32-${{ matrix.build.arch }}-${{ matrix.build.type }}.tar.br
-      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241002/cpython-3.10.15+20241002-x86_64-pc-windows-msvc-shared-install_only_stripped.tar.gz'
+      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-x86_64-pc-windows-msvc-shared-install_only_stripped.tar.gz'
       pip_args: ${{ matrix.build.pip_args }} -r requirements.${{ matrix.build.type }}.txt
     steps:
       - uses: actions/checkout@v4
@@ -173,7 +173,7 @@ jobs:
     runs-on: macos-14
     env:
       artifact_name: darwin-${{ matrix.build.arch }}-${{ matrix.build.type }}.tar.br
-      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241002/cpython-3.11.10+20241002-aarch64-apple-darwin-install_only_stripped.tar.gz'
+      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-aarch64-apple-darwin-install_only_stripped.tar.gz'
       pip_args: -r requirements.${{ matrix.build.type }}.txt
     steps:
       - uses: actions/checkout@v4
@@ -231,7 +231,7 @@ jobs:
     runs-on: macos-13
     env:
       artifact_name: darwin-${{ matrix.build.arch }}-${{ matrix.build.type }}.tar.br
-      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241002/cpython-3.11.10+20241002-x86_64-apple-darwin-install_only_stripped.tar.gz'
+      python_url: 'https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-x86_64-apple-darwin-install_only_stripped.tar.gz'
       pip_args: -r requirements.${{ matrix.build.type }}.txt
     steps:
       - uses: actions/checkout@v4
